# JARVIS-X

./: .env  .gitignore  LICENSE  README.md  generate_pdf.py  main.py  memory.db  pyproject.toml
agents/: README.md  __init__.py  base_agent.py
api/: routes.py
brain/: llm.py
config/: README.md  __init__.py
core/: README.md  __init__.py
jarvis_env/: pyvenv.cfg
jarvis_env/Scripts/: activate  activate.bat
memory/: README.md  __init__.py  memory.py
src/jarvis/: cli.py
tests/: test_basic.py
tools/: README.md  __init__.py  system_tools.py
vision/: README.md  __init__.py
voice/: README.md  __init__.py  stt.py  tts.py
