[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "Basic Python project skeleton"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Your Name", email = "you@example.com" } ]
license = { text = "MIT" }
dependencies = []

[project.scripts]
jarvis = "jarvis.cli:main"
